# free-genai-bootcamp-2025

./: .gitignore  LICENSE  README.md  generate_report.md  gitpod.yaml  index.html  main.py  requirements.txt  script.js  style.css
.github/workflows/: security-scan-summary.yml
AI-Applied-Engineer-Advise/: noted.md  torc-profile
ASL-Finger-Spelling/: Finger-spelling.md
Andrei-Kaparthy/personal-development/: gpt_to_terraform.py  readme.md
Andrei-Kaparthy/personal-development/day-18/: .env.example  .gitignore  README.md  prompts.py  pyproject.toml  settings.py  simulation_plan.py
Data-Primer-with-Kierra/: noted.md
Deepseek-in-aws-lambda/: Deepseek.md
Deepseek-in-aws-lambda/aws-lambda-deepseek-ollama-llm/: template.yml
GenAI-Fireside Chat with Quincy/: Quincy.noted.md
OPEA-Comps-Ollama/: noted.md
OPEA-Comps-Ollama/mega-service-new/: chat.py  docker-compose.yaml  dockerfile
OPEA-Comps-Ollama/mega-services/: app.py  requirements.txt
Ro-Sent-Const-BG/: businessgoal.md
Romanian-Lang-Primer/: language.noted.md
Sentence-Constructor/: Readme.md  prompt.md  prompt.txt
Sentence-Constructor/Darmian-Karlson-Sentence/: Readme.md  prompt.md
Sentence-Constructor/chatgpt/: Readme.md  prompt.md
Sentence-const-architecting-state/: README.md  example.md
Sol-Arch-GenAI/: architecturenoted.md
Solution-arch-with-Marko/: noted.md
Week1/devstools-dev-RyanCarson/: noted.md
Week4 - CustomProject/: readme.md
What-is-ollama?/: ollama.md
kana--streamlit-app-main/: README.md
lang-portal/backend-flask/: noted.md
writing-pratice-kanaApp/: app.py  techSpec.md
(+200 files in other folders)
