[tool.poetry]
name = "attack-gpt-simulator"
version = "0.1.0"
description = "An LLM-powered adversarial simulation generator based on MITRE ATT&CK."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
openai = "^1.3.0"
typer = {extras = ["rich"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"